--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Калькулятор</title>
     <link href="style.css" rel="stylesheet">
+    
 </head>
 <body>
 <div id="main">
@@ -19,5 +20,6 @@
         <label class="calculator-result" id="result">0</label>
     </div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
